2014-04-18  Moritz Bunkus  <moritz@bunkus.org>

        * mkvpropedit, mmg's header editor: bug fix: fixed a failed
        assertion in libEBML when writing the same changes twice to
        certain files (those for which a seek head with a single entry
        pointing to the elements modified by mkvpropedit/mmg's header
        editor; e.g. x264 creates such files). Fixes #1007.

2014-03-22  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: reading fonts embedded in SSA/ASS files was
        sometimes truncating the attachments created from them. Fixes
        #1003.

        * mkvmerge: bug fix: fixed display of very large IDs during
        attachment extraction.

        * mkvmerge: enhancement: improved file type detection speed for
        text subtitle formats.

2014-03-10  Moritz Bunkus  <moritz@bunkus.org>

        * mkvextract: bug fix: during the extraction of chapters, tags or
        segment info XML files with the --redirect-output parameter the
        BOM (byte order mark) was written twice.

2014-03-05  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: MPEG TS: timestamp outliers are ignored if
        they differ at least five minutes from the last valid
        timestamp. Fixes #998.

        * mkvmerge: enhancements: trailing zero bytes will be removed from
        AVC/h.264 NALUs. Implements #997.

2014-03-04  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed timestamp assignment for AVC/h.264
        videos in which recovery point SEIs occur in front of the second
        field of two interlaced fields.

2014-03-02  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.8.0.

2014-02-28  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge, mkvextract: new feature: added support for h.265/HEVC
        by merging the patches from DivX/Rovi Corp. So far HEVC is only
        supported as elementary streams and read from other Matroska
        files.
