@@ -83,6 +83,9 @@ Jacobs, Aurelien <aurel@gnuage.org>
 Jems <anojems@gmail.com>
     * French translation
 
+Kühn, Thiago <thiago_khar@hotmail.com>
+    * Brazilian Portuguese translation
+
 Le Guen, Nicolas (Goldenear) <nleguen@pepper-prod.com>
     * Enhancements and updates to the "CUE sheet to tags & chapter
       conversion" process
