@@ -272,3 +272,4 @@ T_423deprecated_iso639_codes:9e7d8ab790007cf4f26ea31bb5de148f-good-6dd4fb24b0c76
 T_424avc_recover_point_sei_before_second_field:b66042e704ced1b55a5283d4b09876de:passed:20140304-190254:1.581374408
 T_425mpeg_ts_timestamp_outlier:d9c6a4a1c7e815fed80a038128899586:passed:20140305-203603:2.509694471
 T_426extract_write_bom_only_once:a9255d40de93e2731aaead0a746e582f-a9255d40de93e2731aaead0a746e582f:passed:20140310-195606:0.0
+T_427ui_locale_pt_BR:8719aedc77a0435129c79e3a061642bf-344b51e9ae6fe2d8ce60fef18ee0e7d1:passed:20140418-103113:0.143370167
