@@ -1,0 +1,4 @@
+#!/usr/bin/ruby -w
+
+# T_427ui_locale_pt_BR
+test_ui_locale "pt_BR"
