@@ -1,5 +1,8 @@
 2014-04-18  Moritz Bunkus  <moritz@bunkus.org>
 
+        * all: new feature: added a Brazilian Portuguese translation of
+        the programs by Thiago Kühn (see AUTHORS).
+
         * mkvpropedit, mmg's header editor: bug fix: fixed a failed
         assertion in libEBML when writing the same changes twice to
         certain files (those for which a seek head with a single entry
